[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/ui/camp.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/grass_1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GameMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/frame_3.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/quit_2.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/quit.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/robo_32.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/ui/button_2.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/button_1.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/button_3.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/ui/frame_5.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Countdown.gd" type="Script" id=13]
[ext_resource path="res://assets/sprites/portrait_1.png" type="Texture" id=14]
[ext_resource path="res://Scenes/TroopsPanel.gd" type="Script" id=15]
[ext_resource path="res://assets/sprites/arrow_2.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/frame_7.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/arrow_3.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/arrow.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 300
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "countdown"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hide"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GameMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1975.0
margin_bottom = 1141.0
texture = ExtResource( 2 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camp" type="Sprite" parent="Background"]
position = Vector2( 1600, 289 )
rotation = 1.99129
texture = ExtResource( 1 )

[node name="Camp2" type="Sprite" parent="Background"]
position = Vector2( 232, 828 )
texture = ExtResource( 1 )

[node name="ReadyPlayers" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 8.0
margin_right = 342.0
margin_bottom = 592.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="ReadyPlayers"]
margin_left = 58.0
margin_top = 138.0
margin_right = 268.0
margin_bottom = 506.0
custom_fonts/font = ExtResource( 7 )

[node name="Label" type="Label" parent="ReadyPlayers"]
margin_left = 47.0
margin_top = 76.0
margin_right = 279.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 7 )
text = "In Game Players"

[node name="HudOverlay" type="CanvasLayer" parent="."]

[node name="Quit" type="TextureButton" parent="HudOverlay"]
margin_left = 1867.0
margin_top = 15.0
margin_right = 1907.0
margin_bottom = 55.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready" type="TextureButton" parent="."]
margin_left = 29.0
margin_top = 593.0
margin_right = 338.0
margin_bottom = 723.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ready"]
margin_left = 91.0
margin_top = 41.0
margin_right = 186.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 7 )
text = "Ready!"

[node name="TroopsPanel" type="TextureRect" parent="."]
margin_left = 790.0
margin_top = 16.0
margin_right = 1855.0
margin_bottom = 976.0
texture = ExtResource( 17 )
expand = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TroopsPanel"]
margin_left = 428.0
margin_top = 46.0
margin_right = 587.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 6 )
text = "Your Squad"

[node name="Troop1" type="TextureButton" parent="TroopsPanel"]
margin_left = 120.0
margin_top = 169.0
margin_right = 374.0
margin_bottom = 391.0
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="TroopsPanel/Troop1"]
margin_left = -42.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureButton" parent="TroopsPanel/Troop1"]
margin_left = 250.0
margin_top = -8.0
margin_right = 290.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TroopsPanel/Troop1"]
margin_left = 91.0
margin_top = 242.0
margin_right = 171.0
margin_bottom = 280.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 7 )
text = "name"
align = 1

[node name="Troop2" type="TextureButton" parent="TroopsPanel"]
margin_left = 674.0
margin_top = 160.0
margin_right = 928.0
margin_bottom = 382.0
texture_normal = ExtResource( 14 )
expand = true

[node name="left" type="TextureButton" parent="TroopsPanel/Troop2"]
margin_left = -42.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureButton" parent="TroopsPanel/Troop2"]
margin_left = 250.0
margin_top = -8.0
margin_right = 290.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TroopsPanel/Troop2"]
margin_left = 91.0
margin_top = 242.0
margin_right = 171.0
margin_bottom = 280.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 7 )
text = "name"
align = 1

[node name="Troop3" type="TextureButton" parent="TroopsPanel"]
margin_left = 120.0
margin_top = 556.0
margin_right = 374.0
margin_bottom = 778.0
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="TroopsPanel/Troop3"]
margin_left = -42.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureButton" parent="TroopsPanel/Troop3"]
margin_left = 250.0
margin_top = -8.0
margin_right = 290.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TroopsPanel/Troop3"]
margin_left = 91.0
margin_top = 242.0
margin_right = 171.0
margin_bottom = 280.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 7 )
text = "name"
align = 1

[node name="Troop4" type="TextureButton" parent="TroopsPanel"]
margin_left = 681.0
margin_top = 552.0
margin_right = 935.0
margin_bottom = 774.0
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="TroopsPanel/Troop4"]
margin_left = -42.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureButton" parent="TroopsPanel/Troop4"]
margin_left = 250.0
margin_top = -8.0
margin_right = 290.0
margin_bottom = 213.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 16 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TroopsPanel/Troop4"]
margin_left = 91.0
margin_top = 242.0
margin_right = 171.0
margin_bottom = 280.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 7 )
text = "name"
align = 1

[node name="Countdown" type="TextureRect" parent="."]
visible = false
margin_left = 675.0
margin_top = 360.0
margin_right = 1217.0
margin_bottom = 714.0
texture = ExtResource( 12 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Countdown"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 195.0
margin_top = 17.0
margin_right = 363.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 4 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Countdown"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Countdown"]
anims/RESET = SubResource( 2 )
anims/countdown = SubResource( 3 )
anims/hide = SubResource( 5 )

[connection signal="pressed" from="HudOverlay/Quit" to="." method="_on_Quit_pressed"]
[connection signal="toggled" from="Ready" to="." method="_on_Ready_toggled"]
[connection signal="pressed" from="TroopsPanel/Troop1/left" to="TroopsPanel" method="_on_left_pressed_1"]
[connection signal="pressed" from="TroopsPanel/Troop1/right" to="TroopsPanel" method="_on_right_pressed_1"]
[connection signal="pressed" from="TroopsPanel/Troop2/left" to="TroopsPanel" method="_on_left_pressed_2"]
[connection signal="pressed" from="TroopsPanel/Troop2/right" to="TroopsPanel" method="_on_right_pressed_2"]
[connection signal="pressed" from="TroopsPanel/Troop3/left" to="TroopsPanel" method="_on_left_pressed_3"]
[connection signal="pressed" from="TroopsPanel/Troop3/right" to="TroopsPanel" method="_on_right_pressed_3"]
[connection signal="pressed" from="TroopsPanel/Troop4/left" to="TroopsPanel" method="_on_left_pressed_4"]
[connection signal="pressed" from="TroopsPanel/Troop4/right" to="TroopsPanel" method="_on_right_pressed_4"]
[connection signal="timeout" from="Countdown/Timer" to="Countdown" method="_on_Timer_timeout"]
